Blender 2.70 crashes when performing union #39608

Closed
opened 2014-04-05 14:22:58 +02:00 by hihhuli · 13 comments
hihhuli commented 2014-04-05 14:22:58 +02:00 (Migrated from localhost:3001)

System Information
Ubuntu 13.10
Nvidia GTX 580

Blender Version
Broken: 2.70 19e627

Short description of error
Blender crashes when performing union boolean operation for three joined planes with a joined cylinder and a cube.

Crash file:

bpy.ops.object.delete(use_global=False) # Operator
bpy.ops.transform.translate(value=(0.138534, 0.178968, 0.0642163), constraint_axis=(False, False, False), constraint_orientation='GLOBAL', mirror=False, proportional='DISABLED', proportional_edit_falloff='SMOOTH', proportional_size=1) # Operator
bpy.ops.object.modifier_add(type='BOOLEAN') # Operator
bpy.context.object.modifiers["Boolean"].operation = 'UNION' # Property
bpy.context.object.modifiers["Boolean"].object = bpy.data.objects["Cylinder"] # Property

backtrace

./blender() [0xfbe804]
./blender() [0xfbea5a]
/lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7f2b61019ff0]
./blender() [0x1fe211d]
./blender(carve_performBooleanOperation+0x209f) [0x1fd6e6f]
./blender(NewBooleanDerivedMesh+0xcc) [0x11dfa7c]
./blender() [0x11ce139]
./blender() [0x162139f]
./blender() [0x162239a]
./blender(BKE_object_handle_update_ex+0x5e0) [0x1533de0]
./blender() [0x151e26b]
./blender(BLI_task_pool_work_and_wait+0x95) [0x18c9635]
./blender() [0x151e4cb]
./blender() [0x151f498]
./blender(BKE_scene_update_tagged+0x7e) [0x151f6ee]
./blender(wm_event_do_notifiers+0x49a) [0xfd976a]
./blender(WM_main+0x20) [0xfc60d0]
./blender(main+0x506) [0xfc108f]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7f2b61004de5]
./blender() [0xedade5]

Exact steps for others to reproduce the error
For Plane.002, Add Modifier -> Boolean -> Union -> Cylinder
cg.blend

**System Information** Ubuntu 13.10 Nvidia GTX 580 **Blender Version** Broken: 2.70 19e627 **Short description of error** Blender crashes when performing union boolean operation for three joined planes with a joined cylinder and a cube. Crash file: bpy.ops.object.delete(use_global=False) # Operator bpy.ops.transform.translate(value=(0.138534, 0.178968, 0.0642163), constraint_axis=(False, False, False), constraint_orientation='GLOBAL', mirror=False, proportional='DISABLED', proportional_edit_falloff='SMOOTH', proportional_size=1) # Operator bpy.ops.object.modifier_add(type='BOOLEAN') # Operator bpy.context.object.modifiers["Boolean"].operation = 'UNION' # Property bpy.context.object.modifiers["Boolean"].object = bpy.data.objects["Cylinder"] # Property # backtrace ./blender() [0xfbe804] ./blender() [0xfbea5a] /lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7f2b61019ff0] ./blender() [0x1fe211d] ./blender(carve_performBooleanOperation+0x209f) [0x1fd6e6f] ./blender(NewBooleanDerivedMesh+0xcc) [0x11dfa7c] ./blender() [0x11ce139] ./blender() [0x162139f] ./blender() [0x162239a] ./blender(BKE_object_handle_update_ex+0x5e0) [0x1533de0] ./blender() [0x151e26b] ./blender(BLI_task_pool_work_and_wait+0x95) [0x18c9635] ./blender() [0x151e4cb] ./blender() [0x151f498] ./blender(BKE_scene_update_tagged+0x7e) [0x151f6ee] ./blender(wm_event_do_notifiers+0x49a) [0xfd976a] ./blender(WM_main+0x20) [0xfc60d0] ./blender(main+0x506) [0xfc108f] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7f2b61004de5] ./blender() [0xedade5] **Exact steps for others to reproduce the error** For Plane.002, Add Modifier -> Boolean -> Union -> Cylinder [cg.blend](https://archive.blender.org/developer/F84005/cg.blend)
hihhuli commented 2014-04-05 14:22:58 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
hihhuli commented 2014-04-05 14:22:58 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @hihhuli

Added subscriber: @hihhuli

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29

Cannot reproduce the crash here… Note your mesh is non-manifold, which is not well supported by boolean operations (this is not a bug, but mere limitation). Should not crash, though. Maybe Sergey has better insight here?

Cannot reproduce the crash here… Note your mesh is non-manifold, which is not well supported by boolean operations (this is not a bug, but mere limitation). Should not crash, though. Maybe Sergey has better insight here?

Added subscriber: @PatriceBertrand

Added subscriber: @PatriceBertrand

I can confirm the crash with modified steps:

  • Add boolean modifier
  • Set "Cylinder" as a second operand
  • Set "Plane.002" as a scond operand
  • Switch operation from Intersect to Union

This makes release from b.o crash. But interestingly the crash doesn't happen on my laptop.

I can confirm the crash with modified steps: * Add boolean modifier * Set "Cylinder" as a second operand * Set "Plane.002" as a scond operand * Switch operation from Intersect to Union This makes release from b.o crash. But interestingly the crash doesn't happen on my laptop.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I cant redo crash, but if I drag the objects around, I get errors like group 0x60b000e6d0e0 is unclassified!

I cant redo crash, but if I drag the objects around, I get errors like `group 0x60b000e6d0e0 is unclassified!`
Sergey Sharybin self-assigned this 2014-04-08 14:12:30 +02:00

Group is unclassified is not a bug. It's just because of inconsistent normals, not a bug. Can confirm the crash with builds from the release environment but not mine own builds. Something compiler-specific perhaps :S

Group is unclassified is not a bug. It's just because of inconsistent normals, not a bug. Can confirm the crash with builds from the release environment but not mine own builds. Something compiler-specific perhaps :S
Author

This issue was referenced by blender/blender-addons-contrib@ccf9afddba

This issue was referenced by blender/blender-addons-contrib@ccf9afddbaa0a08f4e277b3c19bc15735be9f4a4
Author

This issue was referenced by ccf9afddba

This issue was referenced by ccf9afddbaa0a08f4e277b3c19bc15735be9f4a4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ccf9afddba.

Closed by commit ccf9afddba.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39608
No description provided.